# vastness-game-and-engine

./: .gitignore  CMakeLists.txt  GDD.txt  generate-cmakelists.py  main.cpp  next-up-txt  this_project.sublime-workspace
Engine/: Actor.hpp  AssetLoader.cpp  AssetLoader.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraComponent.hpp  CameraController3rdPerson.hpp  Color.hpp  Core.cpp  Core.hpp  DEBUG.hpp  ECS.hpp  ECSLoader.hpp  ECSTest.hpp  EcsCoreComponents.hpp  Engine.cpp  Engine.hpp  Entity.hpp  FileOperations.cpp  FileOperations.hpp  Input.cpp  Input.hpp  Light.hpp  Loader.cpp  Loader.hpp  Mesh.cpp  Mesh.hpp  OtherResourceManager.cpp  OtherResourceManager.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  Screen.hpp  (+17 more)
Engine/Collections/: Array.hpp  Dictionary.hpp
Engine/Collisions/: Collider.cpp  Collider.hpp  CollisionManager.cpp  CollisionManager.hpp
Engine/ECS/: CMakeLists.txt  Component.hpp  ECS.hpp  Handle.hpp  HandleManager.hpp  List.hpp  OstreamOperators.hpp  readme.txt
Engine/Maths/: Basic.hpp  CMakeLists.txt  Maths.hpp  Matrix4f.cpp  Matrix4f.hpp  OStreamOperators.cpp  OStreamOperators.hpp  Quaternion.cpp  Quaternion.hpp  QuaternionTests.hpp  Random.hpp  Vector3f.cpp  Vector3f.hpp  Vector4f.cpp  Vector4f.hpp  maths-test-helper.py  matrix4f.cpp  matrix4f.hpp  vector2f.cpp  vector2f.hpp  vector3f.cpp  vector3f.hpp  vector4f.cpp  vector4f.hpp
Engine/Physics/: Collider.cpp  Collider.hpp  Collisions.cpp  Collisions.hpp
Engine/Rendering/: CMakeLists.txt  Light.cpp  Light.hpp  RenderManager.cpp  RenderManager.hpp  RenderSystem.hpp  RendererSystem.cpp  RendererSystem.hpp  Shader.cpp  Shader.hpp
Engine/Resources/: CMakeLists.txt  Materials.cpp  Materials.hpp  Meshes.cpp  Meshes.hpp  Shaders.cpp  Shaders.hpp  Textures.cpp  Textures.hpp
Engine/Shaders/: CMakeLists.txt  default_fragment.glsl  default_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl
Game/: ActorTypes.hpp  CMakeLists.txt  Components.hpp  EntityTypes.hpp  FishController.cpp  FishController.hpp  PlayerController.cpp  PlayerController.hpp  game.json
Game/Assets/: CMakeLists.txt  astronaut_2x1.png~
Game/Scripts/: CMakeLists.txt  Camera3rdPerson.cpp  Camera3rdPerson.hpp  FollowEntitySystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp
lib/: libSOIL.lib
